--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/cullophid/express-routeloader",
   "dependencies": {
     "lodash": "~2.4.1",
-    "tv4": "~1.1.0"
+    "tv4": "~1.1.0",
+    "express": "~4.8.3"
   },
   "devDependencies": {
     "gulp-mocha": "~0.5.2",
@@ -33,5 +34,4 @@
     "chai": "~1.9.1",
     "sinon": "~1.10.3"
   }
-  
 }
