--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp": "~3.8.7",
     "gulp-jshint": "~1.8.4",
     "chai": "~1.9.1",
-    "sinon": "~1.10.3"
+    "sinon": "~1.10.3",
+    "jshint-stylish": "~0.4.0"
   }
 }
