--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "homepage": "https://github.com/cullophid/express-routeloader",
   "dependencies": {
+    "express": "~4.8.3",
+    "express-http-errors": "0.0.3",
     "lodash": "~2.4.1",
-    "tv4": "~1.1.0",
-    "express": "~4.8.3"
+    "tv4": "~1.1.0"
   },
   "devDependencies": {
     "gulp-mocha": "~0.5.2",
